--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
         <logger.version>1.6.1</logger.version>
-        <assertj.version>1.7.0</assertj.version>
         <cucumber.version>4.2.6</cucumber.version>
         <bonigarcia.version>3.7.1</bonigarcia.version>
         <aspectj.version>1.8.10</aspectj.version>
@@ -25,20 +24,17 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${logger.version}</version>
         </dependency>
-
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>${bonigarcia.version}</version>
             <scope>compile</scope>
         </dependency>
-
         <!-- API -->
         <dependency>
             <groupId>io.rest-assured</groupId>
@@ -64,13 +60,6 @@
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
-        <!-- Asserting -->
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj.version}</version>
-            <scope>test</scope>
-        </dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -92,22 +81,6 @@
         </dependency>
         <!-- Jackson -->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.9.8</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.9.8</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.8</version>
-        </dependency>
-        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-support</artifactId>
             <version>${selenium.version}</version>
@@ -124,6 +97,16 @@
             <artifactId>selenium-chrome-driver</artifactId>
             <version>${selenium.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-picocontainer</artifactId>
+            <version>4.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>4.0.0-alpha-5</version>
         </dependency>
     </dependencies>
     <build>
