--- a/src/test/resources/taf.properties
+++ b/src/test/resources/taf.properties
@@ -1,3 +1,3 @@
 webdriver.driver=CHROME
-random.user.endpoint=https://randomuser.me/api
-random.user.name.path=/?inc=name
+#webdriver.driver=GECKO
+pet.endpoint=petstore.swagger.io/v2/pet
