finished - allure issue

--- a/src/test/resources/taf.properties
+++ b/src/test/resources/taf.properties
@@ -1,3 +1,5 @@
 webdriver.driver=CHROME
 #webdriver.driver=GECKO
-pet.endpoint=petstore.swagger.io/v2/pet
+pet.endpoint=https://petstore.swagger.io/v2/pet
+
+
