--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,26 @@
         <aspectj.version>1.8.10</aspectj.version>
         <allure.version>2.9.0</allure.version>
         <selenium.version>3.141.0</selenium.version>
+        <maven.failsafe.version>3.0.0-M3</maven.failsafe.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>api_run</id>
+            <properties>
+                <maven.failsafe.thread.count>1</maven.failsafe.thread.count>
+                <maven.failsafe.includes>**/APITestRunner.class</maven.failsafe.includes>
+            </properties>
+        </profile>
+        <profile>
+            <id>ui_run</id>
+            <properties>
+                <maven.failsafe.thread.count>1</maven.failsafe.thread.count>
+                <maven.failsafe.includes>**/UITestRunner.class</maven.failsafe.includes>
+            </properties>
+        </profile>
+    </profiles>
+
 
     <dependencies>
         <dependency>
@@ -99,6 +118,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>${selenium.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-picocontainer</artifactId>
             <version>4.2.6</version>
@@ -151,6 +176,41 @@
                 <configuration>
                     <reportVersion>2.7.0</reportVersion>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven.failsafe.version}</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>RUN-TESTS</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                        <configuration>
+                        <includes>
+                        <include>${maven.failsafe.includes}</include>
+                    </includes>
+                            <properties>
+                                <property>
+                                    <name>dataproviderthreadcount</name>
+                                    <value>${maven.failsafe.thread.count}</value>
+                                </property>
+                            </properties>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>failsafe-verify</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
